--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,6 +7,11 @@ jobs:
   test-lint:
     name: Test and Lint
     runs-on: ubuntu-20.04
+    secrets:
+      DOCKERHUB_USER:
+        required: true
+      DOCKERHUB_TOKEN:
+        required: true
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
