--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,16 @@ services:
     depends_on:
       - db
 
+  frontend:
+    build:
+      context: frontend
+    command: sh -c "yarn install && yarn dev"
+    # command: sh -c "yarn install && yarn build && yarn start"
+    volumes:
+      - ./frontend:/app
+    ports:
+      - "3000:3000"
+
   db:
     image: postgres:13-alpine
     volumes:
