--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,18 @@ services:
     ports:
       - "3000:3000"
 
+  nginx:
+    depends_on:
+      - app
+      - frontend
+    image: nginx:alpine
+    ports:
+      - 8880:80
+      - 8443:443
+    restart: unless-stopped
+    volumes:
+      - ./proxy/dev.conf:/etc/nginx/conf.d/default.conf
+
   db:
     image: postgres:13-alpine
     volumes:
