--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@restart/hooks": "^0.4.5",
     "@restart/ui": "^0.2.5",
     "apexcharts": "3.31.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "classnames": "^2.2.6",
     "create-react-class": "^15.7.0",
