--- a/proxy/dev.conf
+++ b/proxy/dev.conf
@@ -25,6 +25,36 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
+    location ~ ^/favicon.ico(.*)$ {
+        proxy_pass         http://app-service/favicon.ico$1$is_args$args;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+        client_max_body_size       2M;
+        client_body_buffer_size    128k;
+    }
+    location ~ ^/static(.*)$ {
+        proxy_pass         http://app-service/static$1$is_args$args;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+        client_max_body_size       2M;
+        client_body_buffer_size    128k;
+    }
+    location ~ ^/admin(.*)$ {
+        proxy_pass         http://app-service/admin$1$is_args$args;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+        client_max_body_size       2M;
+        client_body_buffer_size    128k;
+    }
     location ~ ^/api(.*)$ {
         proxy_pass         http://app-service/api$1$is_args$args;
         proxy_redirect     off;
