--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.2",
     "@restart/hooks": "^0.4.5",
     "@restart/ui": "^0.2.5",
+    "@types/axios": "^0.14.0",
     "apexcharts": "3.31.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
@@ -57,6 +58,7 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.1.7",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.48.0",
     "simplebar": "^5.3.6",
@@ -79,11 +81,13 @@
     "@types/react-dom-factories": "^1.0.2",
     "@types/react-slick": "^0.23.8",
     "@types/react-stickynode": "^4.0.0",
+    "@types/redux-logger": "^3.0.9",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "8.4.7",
     "postcss-rtlcss": "^3.5.2",
     "prettier": "^2.5.1",
+    "redux-logger": "^3.0.6",
     "typescript": "4.5.4"
   }
 }
