--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,35 +16,40 @@ services:
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     environment:
-      - DB_HOST=db
-      - DB_NAME=devdb
-      - DB_USER=devuser
-      - DB_PASS=changeme
-      - DEBUG=1
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DEBUG=${DEBUG}
+      - HI_DB_HOST=${HI_DB_HOST}
+      - HI_DB_PORT=${HI_DB_PORT}
+      - HI_DB_NAME=${HI_DB_NAME}
+      - HI_DB_USER=${HI_DB_USER}
+      - HI_DB_PASS=${HI_DB_PASS}
     depends_on:
       - db
 
-  frontend:
-    build:
-      context: frontend
-    command: sh -c "yarn install && yarn dev"
-    # command: sh -c "yarn install && yarn build && yarn start"
-    volumes:
-      - ./frontend:/app
-    ports:
-      - "3000:3000"
+  # frontend:
+  #   build:
+  #     context: frontend
+  #   command: sh -c "yarn install && yarn dev"
+  #   # command: sh -c "yarn install && yarn build && yarn start"
+  #   volumes:
+  #     - ./frontend:/app
+  #   ports:
+  #     - "3000:3000"
 
-  nginx:
-    depends_on:
-      - app
-      - frontend
-    image: nginx:alpine
-    ports:
-      - 8880:80
-      - 8443:443
-    restart: unless-stopped
-    volumes:
-      - ./proxy/dev.conf:/etc/nginx/conf.d/default.conf
+  # nginx:
+  #   depends_on:
+  #     - app
+  #     - frontend
+  #   image: nginx:alpine
+  #   ports:
+  #     - 8880:80
+  #     - 8443:443
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./proxy/dev.conf:/etc/nginx/conf.d/default.conf
 
   db:
     image: postgres:13-alpine
@@ -53,9 +58,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=devdb
-      - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=changeme
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
 
 volumes:
   dev-db-data:
