--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: "3.6"
 
 services:
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+  
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
+
   app:
     build:
       context: .
@@ -11,18 +27,37 @@ services:
     volumes:
       - ./app:/app
       - dev-static-data:/vol/web
+      - ../LocalDropbox:/LocalDropbox
+      - ../LocalDrive:/LocalDrive
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     environment:
-      - DB_HOST=db
-      - DB_NAME=devdb
-      - DB_USER=devuser
-      - DB_PASS=changeme
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
       - DEBUG=1
     depends_on:
       - db
+  
+  celery:
+    restart: always
+    build:
+      context: .
+    command: celery -A app worker -l DEBUG --beat
+    volumes:
+      - ./app:/app
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+    depends_on:
+      - db
+      - redis
+      - app
 
   frontend:
     build:
@@ -45,17 +80,6 @@ services:
     restart: unless-stopped
     volumes:
       - ./proxy/dev.conf:/etc/nginx/conf.d/default.conf
-
-  db:
-    image: postgres:13-alpine
-    volumes:
-      - dev-db-data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_DB=devdb
-      - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=changeme
 
 volumes:
   dev-db-data:
