--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ Pillow>=9.1.0,<9.2
 uwsgi>=2.0.20,<2.1
 djangorestframework-simplejwt==5.2.2
 django-auditlog==2.2.2
+celery==5.2.7
+redis==4.5.4
+django-celery-beat==2.5.0
