--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ DB_USER=devuser
 DB_PASS=changeme
 DJANGO_SECRET_KEY=changeme
 DJANGO_ALLOWED_HOSTS=127.0.0.1
+API_URL=http://192.168.88.222:8880
+ALLOWED_HOST=192.168.88.222
