--- a/docker-compose_pro.yml
+++ b/docker-compose_pro.yml
@@ -5,6 +5,7 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
+    restart: always
   
   db:
     image: postgres:13-alpine
@@ -12,6 +13,7 @@ services:
       - dev-db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    restart: always
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
@@ -70,6 +72,7 @@ services:
       - ./frontend:/app
     ports:
       - "3000:3000"
+    restart: always
     environment:
       - API_URL=${API_URL}
 
@@ -82,7 +85,7 @@ services:
     ports:
       - 8880:80
       - 8443:443
-    restart: unless-stopped
+    restart: always
     volumes:
       - ./proxy/dev.conf:/etc/nginx/conf.d/default.conf
 
