--- a/docker-compose_pro.yml
+++ b/docker-compose_pro.yml
@@ -88,6 +88,7 @@ services:
     restart: always
     volumes:
       - ./proxy/dev.conf:/etc/nginx/conf.d/default.conf
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
 
 volumes:
   dev-db-data:
