--- a/proxy/dev.conf
+++ b/proxy/dev.conf
@@ -64,6 +64,8 @@ server {
         proxy_set_header   X-Forwarded-Host $server_name;
         client_max_body_size       2M;
         client_body_buffer_size    128k;
+        proxy_connect_timeout 300s;
+        proxy_read_timeout 300s;
     }
 
     error_page   500 502 503 504  /50x.html;
