--- a/docker-compose_pro.yml
+++ b/docker-compose_pro.yml
@@ -43,6 +43,8 @@ services:
       - DB_PASS=${DB_PASS}
       - DEBUG=1
       - ALLOWED_HOST=${ALLOWED_HOST}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
     depends_on:
       - db
   
