--- a/.env.sample
+++ b/.env.sample
@@ -4,5 +4,7 @@ DB_USER=devuser
 DB_PASS=changeme
 DJANGO_SECRET_KEY=changeme
 DJANGO_ALLOWED_HOSTS=127.0.0.1
-API_URL=http://192.168.88.222:8880
-ALLOWED_HOST=192.168.88.222
+API_URL=http://localhost:8880
+ALLOWED_HOST=localhost
+ALLOWED_HOSTS=app
+CSRF_TRUSTED_ORIGINS=http://localhost:8880,http://192.168.88.221:8880
