--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,9 @@
     "@restart/hooks": "^0.4.5",
     "@restart/ui": "^0.2.5",
     "@types/axios": "^0.14.0",
+    "@uppy/core": "^3.2.0",
+    "@uppy/react": "^3.1.2",
+    "@uppy/tus": "^3.1.0",
     "apexcharts": "3.31.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
