--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - dev-static-data:/vol/web
       - ../LocalDropbox:/LocalDropbox
       - ../LocalDrive:/LocalDrive
+      - ../Working:/Working
+      - ../tmp:/var/tmp
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
