--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,14 @@
     "@restart/ui": "^0.2.5",
     "@types/axios": "^0.14.0",
     "@uppy/core": "^3.2.0",
+    "@uppy/dashboard": "^3.4.0",
+    "@uppy/drag-drop": "^3.0.2",
+    "@uppy/file-input": "^3.0.2",
+    "@uppy/image-editor": "^2.1.2",
+    "@uppy/progress-bar": "^3.0.2",
     "@uppy/react": "^3.1.2",
+    "@uppy/status-bar": "^3.1.2",
+    "@uppy/thumbnail-generator": "^3.0.3",
     "@uppy/tus": "^3.1.0",
     "apexcharts": "3.31.0",
     "axios": "^1.3.4",
