--- a/docker-compose_pro.yml
+++ b/docker-compose_pro.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "6379:6379"
     restart: always
-  
+
   db:
     image: postgres:13-alpine
     volumes:
@@ -47,7 +47,7 @@ services:
       - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
     depends_on:
       - db
-  
+
   celery:
     restart: always
     build:
@@ -76,7 +76,7 @@ services:
       - "3000:3000"
     restart: always
     environment:
-      - API_URL=${API_URL}
+      - REACT_APP_API_URL=${API_URL}
 
 
   nginx:
