--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,6 @@ celery==5.2.7
 redis==4.5.4
 django-celery-beat==2.5.0
 django-extensions==3.2.3
-sicksid-drf-tus==1.22.0
+# sicksid-drf-tus==1.22.0
+django-fsm==2.8.1
+jsonfield==3.1.0
