--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,6 @@ API_URL=http://localhost:8880
 ALLOWED_HOST=localhost
 ALLOWED_HOSTS=app
 CSRF_TRUSTED_ORIGINS=http://localhost:8880,http://192.168.88.221:8880
+USER_ID=501
+GROUP_ID=61
+DEV=true
