--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - ALLOWED_HOST=${ALLOWED_HOST}
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
+      - DJANGO_LOG_LEVEL=${DJANGO_LOG_LEVEL}
     depends_on:
       - db
 
