--- a/docker-compose_pro.yml
+++ b/docker-compose_pro.yml
@@ -23,15 +23,19 @@ services:
     build:
       context: .
       args:
-        - DEV=true
+        DEV: ${DEV}
+        USER_ID: ${USER_ID}
+        GROUP_ID: ${GROUP_ID}
     ports:
       - "8000:8000"
     restart: always
     volumes:
       - ./app:/app
-      - dev-static-data:/vol/web
+      - ../web:/vol/web
       - ../LocalDropbox:/LocalDropbox
       - ../LocalDrive:/LocalDrive
+      - ../Working:/Working
+      - ../tmp:/var/tmp
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -45,6 +49,7 @@ services:
       - ALLOWED_HOST=${ALLOWED_HOST}
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
+      - DJANGO_LOG_LEVEL=${DJANGO_LOG_LEVEL}
     depends_on:
       - db
 
@@ -94,4 +99,3 @@ services:
 
 volumes:
   dev-db-data:
-  dev-static-data:
