--- a/docker-compose_pro.yml
+++ b/docker-compose_pro.yml
@@ -57,6 +57,10 @@ services:
     restart: always
     build:
       context: .
+      args:
+        DEV: ${DEV}
+        USER_ID: ${USER_ID}
+        GROUP_ID: ${GROUP_ID}
     command: celery -A app worker -l DEBUG --beat
     volumes:
       - ./app:/app
@@ -65,6 +69,11 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
+      - DEBUG=1
+      - ALLOWED_HOST=${ALLOWED_HOST}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
+      - DJANGO_LOG_LEVEL=${DJANGO_LOG_LEVEL}
     depends_on:
       - db
       - redis
