--- a/proxy/dev.conf
+++ b/proxy/dev.conf
@@ -35,6 +35,18 @@ server {
         client_max_body_size       2M;
         client_body_buffer_size    128k;
     }
+
+    location ~ ^/_next(.*)$ {
+        proxy_pass         http://frontend-service/_next$1$is_args$args;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+        client_max_body_size       2M;
+        client_body_buffer_size    128k;
+    }
+
     location ~ ^/static(.*)$ {
         proxy_pass         http://app-service/static$1$is_args$args;
         proxy_redirect     off;
