--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.6"
 
 services:
-  redis:
-    image: redis:latest
-    ports:
-      - "6379:6379"
-    restart: always
+  # redis:
+  #   image: redis:latest
+  #   ports:
+  #     - "6379:6379"
+  #   restart: always
 
   db:
     image: postgres:13-alpine
@@ -70,24 +70,24 @@ services:
   #     - redis
   #     - app
 
-  frontend:
-    build:
-      context: frontend
-    command: sh -c "yarn install && yarn dev"
-    # command: sh -c "yarn install && yarn build && yarn start"
-    volumes:
-      - ./frontend:/app
-    ports:
-      - "3000:3000"
-    restart: always
-    environment:
-      - REACT_APP_API_URL=${API_URL}
+  # frontend:
+  #   build:
+  #     context: frontend
+  #   command: sh -c "yarn install && yarn dev"
+  #   # command: sh -c "yarn install && yarn build && yarn start"
+  #   volumes:
+  #     - ./frontend:/app
+  #   ports:
+  #     - "3000:3000"
+  #   restart: always
+  #   environment:
+  #     - REACT_APP_API_URL=${API_URL}
 
 
   nginx:
     depends_on:
       - app
-      - frontend
+      # - frontend
     image: nginx:alpine
     ports:
       - 8880:80
