--- a/proxy/dev.conf
+++ b/proxy/dev.conf
@@ -2,9 +2,9 @@ upstream app-service {
     server app:8000;
 }
 
-upstream frontend-service {
-    server frontend:3000;
-}
+# upstream frontend-service {
+#     server frontend:3000;
+# }
 
 server {
     listen       80;
@@ -13,14 +13,14 @@ server {
     charset utf-8;
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location / {
-        proxy_pass         http://frontend-service;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
-    }
+    # location / {
+    #     proxy_pass         http://frontend-service;
+    #     proxy_redirect     off;
+    #     proxy_set_header   Host $host;
+    #     proxy_set_header   X-Real-IP $remote_addr;
+    #     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header   X-Forwarded-Host $server_name;
+    # }
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
@@ -36,16 +36,16 @@ server {
         client_body_buffer_size    128k;
     }
 
-    location ~ ^/_next(.*)$ {
-        proxy_pass         http://frontend-service/_next$1$is_args$args;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
-        client_max_body_size       2M;
-        client_body_buffer_size    128k;
-    }
+    # location ~ ^/_next(.*)$ {
+    #     proxy_pass         http://frontend-service/_next$1$is_args$args;
+    #     proxy_redirect     off;
+    #     proxy_set_header   Host $host;
+    #     proxy_set_header   X-Real-IP $remote_addr;
+    #     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header   X-Forwarded-Host $server_name;
+    #     client_max_body_size       2M;
+    #     client_body_buffer_size    128k;
+    # }
 
     location ~ ^/static(.*)$ {
         proxy_pass         http://app-service/static$1$is_args$args;
