--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ django-extensions==3.2.3
 # sicksid-drf-tus==1.22.0
 django-fsm==2.8.1
 jsonfield==3.1.0
+
+google-api-python-client==2.91.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
